changed margin to 1 in

--- a/cs180/cs180-notes.tex
+++ b/cs180/cs180-notes.tex
@@ -206,6 +206,7 @@ Given a set of m candidates and a set of n voters, determine which candidate wil
 
 \chapter{Graphs}
 
+
 \begin{tabular}{lp{12cm}}
     \toprule
     Term & Definition \\
@@ -230,7 +231,8 @@ Given a set of m candidates and a set of n voters, determine which candidate wil
   *Trees and DAG's differ in that in a DAG a node can have multiple parents and still not have a cycle (due to the directed edges) and in a tree a node can only have one parent (or it is guaranteed to have a cycle).
 
 \section{Data Structure Representations}
-\begin{figure}
+
+\begin{figure}[t]
     \centering
     \img{graph.png}
     \caption{We will refer to this graph in the representations discussed.}
