--- a/cs180/cs180-notes.tex
+++ b/cs180/cs180-notes.tex
@@ -92,11 +92,11 @@ We have a set of $n$ men and $n$ women to be married, each of which has a prefer
     \item Until there are no free men
     \begin{itemize}
         \item Pick an arbitrary man, $m$
-        \item Propose to the first unproposedto woman on his preference list (i.e. the first woman he has not yet proposed to)
-        \item If the woman is single, the manand woman become engaged
-        \item If the woman is engaged toanother man, $m'$
+        \item Propose to the first unproposed to woman on his preference list (i.e. the first woman he has not yet proposed to)
+        \item If the woman is single, the man and woman become engaged
+        \item If the woman is engaged to another man, $m'$
         \begin {itemize}
-            \item If $m$ is higher onthepriority list than $m'$, $m$ and the woman become engaged and $m'$ is freed
+            \item If $m$ is higher on the priority list than $m'$, $m$ and the woman become engaged and $m'$ is freed
             \item Else no change
         \end{itemize}
     \end{itemize}
@@ -615,7 +615,7 @@ Some common recurrences
 
 
 \section{Inverted Pairs Problem}
-Given a list of n integers, we want to find how many inversions are in the list. An inversion can be defined as the case where i < j and ai > aj. Essentially, it means that a larger number comes before a smaller number. We want to count these instances efficiently. 
+Given a list of n integers, we want to find how many inversions are in the list. An inversion can be defined as the case where i < j and a$_i$ > a$_j$. Essentially, it means that a larger number comes before a smaller number. We want to count these instances efficiently. 
 
 \algorithm
 {
