--- a/preamble.tex
+++ b/preamble.tex
@@ -65,3 +65,4 @@
 
 \newcommand \img[1]{\includegraphics[width=0.5\linewidth]{#1}}
 \newcommand \qed[0]{\hfill$\blacksquare$}
+\newcommand \kw[1]{\textbf{#1}}
