--- a/c-ee110/l1.tex
+++ b/c-ee110/l1.tex
@@ -1,4 +1,4 @@
-\chapter{Set Theory and Random Variables}
+\chapter{Sets and Probablity Theory}
 
 \section{Probabilistic Sets}
 A random event, E, has more than 1 possible outcome in the sample space S. S is the collection of all possible event outcomes. We know that E $\subset$ S.
@@ -96,7 +96,7 @@ We can derive several rules from these axioms.
 We may want to determine the probability of an event given another event is guaranteed to occur. This is denoted $P(E_1 | E_2)$, which is read as $E_1$ given $E_2$. It essentially redefines the sample space to be $E_2$.
 
 
-\begin{equation}
+\begin{equation} \label{eq:1.1}
     P(E_1 | E_2) = \begin{cases}
         \frac{P(E_1E_2)}{P(E_2)} & P(E_2) > 0 \\
         0 & P(E_2) = 0
@@ -122,7 +122,7 @@ This holds in general for n events.
     \]
 
     \[
-        P(E_1E_2 | E_3)  = P(E_1|E_2|E_3)P(E_2|E_3) \text{, which follows from (1.1)}
+        P(E_1E_2 | E_3)  = P(E_1|E_2|E_3)P(E_2|E_3) \text{, which follows from \ref{eq:1.1}}
     \]
 \end{example}
 
@@ -131,15 +131,15 @@ This holds in general for n events.
 \subsection*{Independence}
 Two events are indpendent iff $P(E_1|E_2) = P(E_1)$
 
-We have mutual independence if $P(E_1E_2...E_n) = P(E_1)P(E_2)...P(E_n)$.
+We have mutual independence if $P(E_1E_2 \ldots E_n) = P(E_1)P(E_2) \ldots P(E_n)$.
 
 \vspace{.5cm}
 
 \subsection*{Theorem of Total Probability}
-Consider an event A and a set of of mutually exclusive and collectively exhaustive events $E_1, E_2, ..., E_3$.
+Consider an event A and a set of of mutually exclusive and collectively exhaustive events $E_1, E_2, \ldots, E_3$.
 
-\begin{equation}
-    P(A) = \sum_{i=1}^nP(A|E_i)P(E_i)
+\begin{equation} \label{eq:1.2}
+    P(A) = \sum_{i=1}^{n}P(A|E_i)P(E_i)
 \end{equation}
 
 \vspace{.5cm}
@@ -147,10 +147,10 @@ Consider an event A and a set of of mutually exclusive and collectively exhausti
 \vspace{.5cm}
 
 \subsection*{Bayes' Rule}
-Consider an event A and a set of of mutually exclusive and collectively exhaustive events $E_1, E_2, ..., E_3$ in S.
+Consider an event A and a set of of mutually exclusive and collectively exhaustive events $E_1, E_2, \ldots, E_3$ in S.
 
 \begin{align*}
     P(AE_j) = P(E_j|A)P(A) = P(A|E_j)P(E_j) \\
-    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{P(A)}\\
-    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{\sum_{i=1}^nP(A|E_i)P(E_i)}
+    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{P(A)} \\
+    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{\sum_{i=1}^{n}P(A|E_i)P(E_i)}\\ \text{where equation \ref{eq:1.2} is used to subtitute P(A)}
 \end{align*}
