c&ee 110 week 2 lec 2

--- a/c-ee110/c-ee110.tex
+++ b/c-ee110/c-ee110.tex
@@ -6,13 +6,7 @@
 \author{Einar Balan}
 \date{}
 
-\newenvironment{example}
-{
-\paragraph{Ex)}
-}
-{
-
-}
+\newenvironment{example}{\paragraph{Ex)}}{}
 
 \begin{document}
 
@@ -21,5 +15,6 @@
 
 \input{l1.tex}
 \input{l2.tex}
+\input{l3.tex}
 
 \end{document}
