--- a/c-ee110/l1.tex
+++ b/c-ee110/l1.tex
@@ -152,5 +152,5 @@ Consider an event A and a set of of mutually exclusive and collectively exhausti
 \begin{align*}
     P(AE_j) = P(E_j|A)P(A) = P(A|E_j)P(E_j) \\
     P(E_j|A) = \frac{P(A|E_j)P(E_j)}{P(A)} \\
-    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{\sum_{i=1}^{n}P(A|E_i)P(E_i)}\\ \text{where equation \ref{eq:1.2} is used to subtitute P(A)}
+    P(E_j|A) = \frac{P(A|E_j)P(E_j)}{\sum_{i=1}^{n}P(A|E_i)P(E_i)}\\ \text{where equation~\ref{eq:1.2} is used to subtitute P(A)}
 \end{align*}
