--- a/cs181/l1.tex
+++ b/cs181/l1.tex
@@ -24,7 +24,7 @@ There are two aspects of computing:
 
 \vspace*{0.5cm}
 
-\kw{Representations}
+\subsubsection*{Representations}
 \begin{itemize}
     \item In general we can represent many objects as a sequence of 0's and 1's. Anything from images, text, video, audio, databases, etc. can be encoded in binary.
     \item BIG IDEA: We can compose representations in order to represent any object i.e. if you can represent objects of type T, then you can also represent lists of that object
