--- a/cs181/l2.tex
+++ b/cs181/l2.tex
@@ -56,7 +56,7 @@ Additionally, concrete code of this encoding and decoding in action can be found
 
 \hr
 
-\kw{Algorithms}
+\subsection*{Algorithms}
 
 Informally, algorithms are a series of steps to solve some problem, or a way to transform inputs to a desired output. How can we formalize this?
 
@@ -73,6 +73,7 @@ Additionally, we can define steps as "some basic operations."
 \vspace{.5cm}
 
 \kw{Boolean Circuits}
+
 A boolean circuit uses AND/OR/NOT as basic operations. For concision, we will omit their definitions. AND is often denoted $\land$, OR is $\lor$, and NOT is $\lnot$.
 
 \begin{example}
