--- a/csm146/csm146.tex
+++ b/csm146/csm146.tex
@@ -6,11 +6,21 @@
 \author{Einar Balan}
 \date{}
 
+\newenvironment{example}{
+        \vspace{0.5cm}
+        \kw{Example}
+}
+{
+        \vspace{0.5cm}
+}
+
+
 \begin{document}
 
 \maketitle
 \tableofcontents
 
 \input{l1.tex}
+\input{l2.tex}
 
 \end{document}
