--- a/preamble.tex
+++ b/preamble.tex
@@ -66,3 +66,8 @@
 \newcommand \img[1]{\includegraphics[width=0.5\linewidth]{#1}}
 \newcommand \qed[0]{\hfill$\blacksquare$}
 \newcommand \kw[1]{\textbf{#1}}
+\newcommand \hr{
+        \vspace{.25cm}
+        \textcolor[RGB]{180, 180, 180}{\rule{\textwidth}{1pt}}
+        \vspace{.25cm}
+}
