--- a/cs181/cs181.tex
+++ b/cs181/cs181.tex
@@ -37,6 +37,8 @@
                 #1
         \end{theorem}
 
+        \vspace{.5cm}
+        
         \begin{proof}
                 #2
         \end{proof}
@@ -50,5 +52,6 @@
 
 \input{l1.tex}
 \input{l2.tex}
+\input{l3.tex}
 
 \end{document}
