--- a/cs181/l2.tex
+++ b/cs181/l2.tex
@@ -48,7 +48,7 @@ A quick remark regarding effiency of PFE:
     \item instead, we can get a conversion where the new encoding has length $|E(x)| + 2log_2(|E(x)|) + 2$ by encoding the length of the objects instead of the data itself
 \end{itemize}
 
-Additionally, concrete code of this encoding and decoding in action can be found here: TODO
+Additionally, concrete code of this encoding and decoding in action can be found \href{https://edstem.org/us/courses/28562/workspaces/pUNFGGbgVl0Q4IyBwE0ctDMwIXN0XBdt}{here}.
 
 \vspace{.5cm}
 
