--- a/csm146/csm146.tex
+++ b/csm146/csm146.tex
@@ -14,6 +14,14 @@
         \vspace{0.5cm}
 }
 
+\newenvironment{definition}{
+        \vspace{0.5cm}
+        \kw{Defintion}
+}
+{
+        \vspace{0.5cm}
+}
+
 
 \begin{document}
 
